[package]
name = "unnamed-interpreter"
version = "0.0.0"
authors = [
	"Mavity The Madity",
]
edition = "2024"
rust-version = "1.98.0"
description = "Insane man creates stack-based toy language for fun"
homepage = "https://github.com/EpicVon2468/unnamed-interpreter/"
repository = "https://github.com/EpicVon2468/unnamed-interpreter/"
license = "MIT OR Apache-2.0"
exclude = [
	".github/",
]

[package.metadata.dist]
dist = true
# https://github.com/axodotdev/cargo-dist/issues/745
#features = [
#]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"